--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         ]
     },
     "dependencies": {
+        "@reduxjs/toolkit": "^1.3.6",
         "@testing-library/jest-dom": "^4.2.4",
         "@testing-library/react": "^9.5.0",
         "@testing-library/user-event": "^7.2.1",
@@ -45,10 +46,12 @@
         "node-sass": "^4.14.1",
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
+        "react-redux": "^7.2.0",
         "react-scripts": "3.4.1",
         "react-select": "^3.1.0"
     },
     "devDependencies": {
+        "@types/react-redux": "^7.1.9",
         "@types/react-select": "^3.0.13",
         "@typescript-eslint/eslint-plugin": "^3.0.2",
         "@typescript-eslint/parser": "^3.0.2",
