--- a/package.json
+++ b/package.json
@@ -55,6 +55,8 @@
         "@types/react-select": "^3.0.13",
         "@typescript-eslint/eslint-plugin": "^3.0.2",
         "@typescript-eslint/parser": "^3.0.2",
+        "enzyme": "^3.11.0",
+        "enzyme-adapter-react-16": "^1.15.2",
         "eslint-config-prettier": "^6.11.0",
         "eslint-plugin-prettier": "^3.1.3",
         "husky": "^4.2.5",
